<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_locate"
        android:icon="@drawable/ic_location"
        android:title="@string/action_locate"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_star_outline"
        android:title="@string/action_favorite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_info"
        android:title="@string/action_share"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_compare"
        android:icon="@drawable/ic_star_filled"
        android:title="@string/action_compare"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_api_key"
        android:icon="@drawable/ic_key"
        android:title="@string/action_api_key"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_tutorial"
        android:icon="@drawable/ic_tutorial"
        android:title="@string/action_tutorial"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_info"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
